Fix a problema con asistencias duplicadas